[metadata]
name = etcpack
version = 1.0.0
author = K0lb3
url = https://github.com/K0lb3/etcpack/
download_url = https://github.com/K0lb3/etcpack/tarball/master
description-file = README.md
long-description = file: README.md
long_description_content_type= text/markdown
license = MIT
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: zlib/libpng License
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Multimedia :: Graphics

[flake8]
ignore = W191
